# wonda-template

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  app.py  config.py  initialization.py  keyboards.py
src/blueprints/: __init__.py
src/blueprints/callbacks/: __init__.py  start.py
src/blueprints/commands/: start.py
src/database/: user.py
src/middlewares/: __init__.py  registration.py
